Adding flatpak update to alias

--- a/tobash.conf
+++ b/tobash.conf
@@ -6,6 +6,6 @@ fi
 
 alias cs='clear'
 alias lsa='ls -a'
-alias update='sudo apt update'
+alias update='sudo apt update && flatpak update'
 alias upgrade='sudo apt upgrade -y'
 alias upgradable='apt list --upgradable'
