--- a/tobash.conf
+++ b/tobash.conf
@@ -9,3 +9,4 @@ alias lsa='ls -a'
 alias update='sudo apt update && flatpak update'
 alias upgrade='sudo apt upgrade -y'
 alias upgradable='apt list --upgradable'
+alias m=micro
