--- a/auto-cpufreq.conf
+++ b/auto-cpufreq.conf
@@ -1,8 +1,8 @@
 [charger]
-governor = powersave
+governor = performance
 turbo = never
 scaling_min_freq = 1400000
-scaling_max_freq = 2100000
+scaling_max_freq = 3000000
 
 [battery]
 governor = powersave
