--- a/polybar/hack/config.ini
+++ b/polybar/hack/config.ini
@@ -158,9 +158,9 @@ inherit = bar/main
 bottom = true
 border-top-size = 2
 border-top-color = ${color.primary}
-modules-left = alsa sep backlight
-modules-center = cpu sep memory sep filesystem
-modules-right = bluetoothctl sep checknet sep battery
+modules-left = cpu sep memory sep filesystem
+modules-center = ytbmsc
+modules-right = pulseaudio sep backlight sep bluetoothctl sep checknet sep battery
 enable-ipc = true
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
