--- a/polybar/hack/user_modules.ini
+++ b/polybar/hack/user_modules.ini
@@ -8,6 +8,12 @@
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
+[module/ytbmsc]
+type = custom/script
+exec = ~/.config/polybar/hack/scripts/player.sh
+tail = false
+interval = 5
+
 [module/checknet]
 type = custom/script
 
