--- a/gr8sh/prompt.config
+++ b/gr8sh/prompt.config
@@ -37,7 +37,7 @@ font_color_pwd="blue"
 background_pwd="none" #white
 texteffect_pwd="bold"
 
-font_color_git="red"
+font_color_git="9"
 background_git="none" #52
 texteffect_git="bold"
 
@@ -76,10 +76,10 @@ max_pwd_char="25"
 ##==============================================================================
 ## GIT
 ##==============================================================================
-git_symbol_synced=$(echo -e " ✔️")
-git_symbol_unpushed=$(echo -e " 👆")
-git_symbol_unpulled=$(echo -e " 👇")
+git_symbol_synced=$(echo -e " מּ") #☑️
+git_symbol_unpushed=$(echo -e " ") #⤴️
+git_symbol_unpulled=$(echo -e " ") #⤵️
 git_symbol_unpushedunpulled=$(echo -e " 🔃")
-git_symbol_dirty=$(echo -e " ⚠️")
+git_symbol_dirty=$(echo -e " ") #💾
 git_symbol_dirty_unpushed=$(echo -e " ⛔")
 git_symbol_dirty_unpushedunpulled=$(echo -e " 🚫")
