prompt and installer

--- a/gr8sh/prompt.config
+++ b/gr8sh/prompt.config
@@ -76,10 +76,10 @@ max_pwd_char="25"
 ##==============================================================================
 ## GIT
 ##==============================================================================
-git_symbol_synced=$(echo -e " מּ") #☑️
-git_symbol_unpushed=$(echo -e " ") #⤴️
-git_symbol_unpulled=$(echo -e " ") #⤵️
+git_symbol_synced=$(echo -e " ☑️") #מּ
+git_symbol_unpushed=$(echo -e " ⤴️") #
+git_symbol_unpulled=$(echo -e " ⤵️") #
 git_symbol_unpushedunpulled=$(echo -e " 🔃")
-git_symbol_dirty=$(echo -e " ") #💾
+git_symbol_dirty=$(echo -e " 💾") #
 git_symbol_dirty_unpushed=$(echo -e " ⛔")
 git_symbol_dirty_unpushedunpulled=$(echo -e " 🚫")
