modify cpu, ram and disk usage prefix and label started using different cpu, ram and disk modules bluetooth and wifi right/left click now open gnome-control-center wifi module does not show wifi name anymore added padding to both top and bottom bar without rounded borders

--- a/polybar/hack/config.ini
+++ b/polybar/hack/config.ini
@@ -152,17 +152,22 @@ modules-left =  launcher sep xxxwindow
 modules-center = date
 modules-right = workspaces sep sysmenu
 enable-ipc = true
+width = 99%
+offset-x = 0.5%
+offset-y = 1%:-2
 ;;title sep 
 [bar/bottom]
 inherit = bar/main
 bottom = true
 border-top-size = 2
 border-top-color = ${color.primary}
-modules-left = cpu sep memory sep filesystem
+modules-left = cpu_bar sep memory_bar sep filesystem_bar
 modules-center = ytbmsc
 modules-right = pulseaudio sep backlight sep bluetoothctl sep checknet sep battery
 enable-ipc = true
-
+width = 99%
+offset-x = 0.5%
+offset-y = 1%:-2
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
 ; The separator will be inserted between the output of each module
