--- a/polybar/hack/modules.ini
+++ b/polybar/hack/modules.ini
@@ -10,7 +10,8 @@
 type = custom/script
 exec = ~/.config/polybar/hack/scripts/bluetooth.sh
 tail = true
-click-left = ~/.config/polybar/hack/scripts/bluetooth.sh --toggle &
+click-left = gnome-control-center &
+click-right = gnome-control-center &
 
 [module/xxxwindow]
 type = custom/script
