--- a/polybar/hack/user_modules.ini
+++ b/polybar/hack/user_modules.ini
@@ -12,7 +12,7 @@
 type = custom/script
 exec = ~/.config/polybar/hack/scripts/player.sh
 tail = false
-interval = 5
+interval = 2
 
 [module/checknet]
 type = custom/script
@@ -26,7 +26,8 @@ exec = ~/.config/polybar/hack/scripts/check-network
 ; before the main exec command is invoked.
 ; Default: ""
 ;;exec-if = ""
-
+click-left = gnome-control-center &
+click-right = gnome-control-center &
 ; Will the script output continous content?
 ; Default: false
 tail = true
@@ -39,7 +40,7 @@ interval = 5
 ;   <output> - deprecated
 ;   <label> (default)
 format = <label>
-;format-prefix = 
+; format-prefix =
 
 ; Available tokens:
 ;   %output%
@@ -51,8 +52,8 @@ label = %output%
 ;   %pid%
 ;
 ; "click-(left|middle|right)" will be executed using "/usr/bin/env sh -c [command]"
-click-left = networkmanager_dmenu &
-click-right = networkmanager_dmenu &
+; click-left = networkmanager_dmenu &
+; click-right = networkmanager_dmenu &
 ;;double-click-left = echo double left %counter%
 ;;double-click-middle = echo double middle %counter%
 ;;double-click-right = echo double right %counter%
