--- a/polybar/hack/bars.ini
+++ b/polybar/hack/bars.ini
@@ -251,7 +251,7 @@ interval = 0.5
 ;   <ramp-load>
 ;   <ramp-coreload>
 ;;format = <label> <ramp-coreload>
-format = <bar-load> <label>
+format = <label>
 format-prefix = "﬙ "
 
 ; Available tokens:
@@ -305,7 +305,7 @@ fixed-values = false
 ;   <bar-free>
 ;   <bar-used>
 ;   <ramp-capacity>
-format-mounted = <bar-used> <label-mounted>
+format-mounted = <label-mounted>
 format-mounted-prefix = " "
 
 ; Available tags:
@@ -323,7 +323,8 @@ format-unmounted-prefix = " "
 ;   %free%
 ;   %used%
 ; Default: %mountpoint% %percentage_free%%
-label-mounted = %used%/%total%
+; label-mounted = %used%/%total%
+label-mounted = %percentage_used%% of %total%
 
 ; Available tokens:
 ;   %mountpoint%
@@ -366,7 +367,7 @@ interval = 2
 ;   <bar-swap-free>
 ;   <ramp-swap-used>
 ;   <ramp-swap-free>
-format = <bar-used> <label>
+format = <label>
 format-prefix = " "
 
 ; Available tokens:
@@ -387,7 +388,7 @@ format-prefix = " "
 ;   %gb_swap_free%
 ;   %gb_swap_used%
 
-label = "%mb_used%"
+label = "%gb_used%"
 
 ; Only applies if <bar-used> is used
 bar-used-width = 10
