Delete unused rofi powermenu themes and colors; Change polybar colors.

--- a/polybar/hack/config.ini
+++ b/polybar/hack/config.ini
@@ -147,7 +147,13 @@ font-1 = "Iosevka Nerd Font:pixelsize=15;4"
 [bar/top]
 inherit = bar/main
 border-bottom-size = 2
+border-top-size = 2
+border-left-size = 2
+border-right-size = 2
 border-bottom-color = ${color.primary}
+border-top-color = ${color.primary}
+border-left-color = ${color.primary}
+border-right-color = ${color.primary}
 modules-left =  launcher sep xxxwindow
 modules-center = date
 modules-right = workspaces sep sysmenu
@@ -159,8 +165,14 @@ offset-y = 1%:-2
 [bar/bottom]
 inherit = bar/main
 bottom = true
+border-bottom-size = 2
 border-top-size = 2
+border-left-size = 2
+border-right-size = 2
+border-bottom-color = ${color.primary}
 border-top-color = ${color.primary}
+border-left-color = ${color.primary}
+border-right-color = ${color.primary}
 modules-left = cpu_bar sep memory_bar sep filesystem_bar
 modules-center = ytbmsc
 modules-right = pulseaudio sep backlight sep bluetoothctl sep checknet sep battery
