--- a/polybar/hack/colors.ini
+++ b/polybar/hack/colors.ini
@@ -12,9 +12,12 @@
 ;; Use pywal.sh in scripts directory to use colors from an image/wallpaper.
 
 ;; main colors
-background = #263238
+background = #230031
+;#263238
 foreground = #DFDFDF
-primary = #00BCD4
+primary = #FF2E74
+;#0396A6
+;#00BCD4
 red = #FF5250
 green = #43a047
 yellow = #fdd835
