some pop os runner and tobash conf

--- a/tobash.conf
+++ b/tobash.conf
@@ -6,7 +6,7 @@ fi
 
 alias cs='clear'
 alias lsa='ls -a'
-alias update='sudo apt update && flatpak update'
-alias upgrade='sudo apt upgrade -y'
-alias upgradable='apt list --upgradable'
+alias update='sudo nala update && flatpak update'
+alias upgrade='sudo nala upgrade -y'
+alias upgradable='nala list --upgradable'
 alias m=micro
