some more configs

--- a/tobash.conf
+++ b/tobash.conf
@@ -10,3 +10,9 @@ alias update='sudo nala update && flatpak update'
 alias upgrade='sudo nala upgrade -y'
 alias upgradable='nala list --upgradable'
 alias m=micro
+alias msc='cd ~/Projects/msresults'
+alias df='cd ~/Projects/dotfiles'
+alias temps='curl wttr.in/Campinas'
+
+temp="$(curl -s wttr.in/Campinas?format=3)"
+echo $temp
