remove rofi/polybar and mix some shell scripts

--- a/tobash.conf
+++ b/tobash.conf
@@ -6,13 +6,16 @@ fi
 
 alias cs='clear'
 alias lsa='ls -a'
-alias update='sudo nala update && flatpak update'
+alias update='sudo nala update && echo "Updating Flatpaks" && flatpak update'
 alias upgrade='sudo nala upgrade -y'
 alias upgradable='nala list --upgradable'
 alias m=micro
 alias msc='cd ~/Projects/msresults'
 alias df='cd ~/Projects/dotfiles'
+alias projs='cd ~/Projects'
 alias temps='curl wttr.in/Campinas'
 
-temp="$(curl -s wttr.in/Campinas?format=3)"
-echo $temp
+curr_temp="$(curl -s wttr.in/Campinas?format=3)"
+
+export PATH="/home/thzgr/.local/bin:$PATH"
+
